--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>My First Site!</title>
 </head>
 <body>
-<h1>Hey Guys... What's Up? I am Pritha.</h1>
+<h1>Hey Guys... What's Up? I am Pritha Roy Choudhury.</h1>
 </body>
 </html>
