--- a/site/index.html
+++ b/site/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <h1>Hey Guys... What's Up? I am Pritha Roy Choudhury.</h1>
+	<p>I am a student of Techno International New Town.</p>
 </body>
 </html>
