--- a/module2_solution /index.html
+++ b/module2_solution /index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>HTML only</title>
+<!--     <link rel="stylesheet" href="style_it_coursera.css"> -->
+</head>
+<body>
+    <div>
+        <p>My name is Pritha Roy Choudhury.</p>
+    </div>
+      <h1>Our Menu: </h1>
+      <div class="row">
+        <div class="column"><p>Chicken</p>
+          <p>lorem ipso</p>
+        </div>
+        <div class="column"><p>Beef</p>
+          <p>lorem ipso</p>
+        </div>
+        <div class="column"><p>Sushi</p>
+          <p>lorem ipso</p>
+        </div>
+      </div>
+   </body>
+</html>
