--- a/module2_solution /index.html
+++ b/module2_solution /index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>HTML only</title>
-<!--     <link rel="stylesheet" href="style_it_coursera.css"> -->
+    <link rel="stylesheet" href="style_it_coursera.css">
 </head>
 <body>
     <div>
